--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,14 +8,12 @@ blocks:
   - name: Test
     task:
       jobs:
-        - name: pytest
+        - name: Get nodes
           commands:
-            - sem-version python 3.7
             - checkout
-            - python -m pip install --upgrade pip
-            - pip install -r requirements.txt
-            - pip install flake8
-            - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-            - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-            - pip install pytest
-            - pytest
+            - kubectl get nodes
+      secrets:
+        - name: do-k8s
+      env_vars:
+        - name: KUBECONFIG
+          value: /home/semaphore/.kube/dok8s.yaml
