--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,5 +24,5 @@ blocks:
           commands:
             - 'checkout '
             - cache restore
-            - bundle install --deployment --path vendor/bundle
+            - bundle install --deployment --path vendor
             - bundle exec rspec
