--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,6 +15,8 @@ blocks:
             - cache restore
             - bundle install --deployment --path vendor/bundle
             - cache store
+      secrets:
+        - name: bundle
   - name: Tests
     dependencies:
       - ' Install dependencies'
