--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -15,8 +15,6 @@ blocks:
             - cache restore
             - bundle install --deployment --path vendor/bundle
             - cache store
-      secrets:
-        - name: bundle
   - name: Tests
     dependencies:
       - ' Install dependencies'
@@ -26,5 +24,5 @@ blocks:
           commands:
             - 'checkout '
             - cache restore
-            - bundle install --deployment --path vendor
+            - bundle install --deployment --path vendor/bundle
             - bundle exec rspec
