--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,7 +13,7 @@ blocks:
           commands:
             - checkout
             - cache restore
-            - bundle install --deployment --path semaphore.yml
+            - bundle install --deployment --path bundle/vendor
             - cache store
   - name: Tests
     dependencies:
