--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,7 +13,8 @@ blocks:
           commands:
             - checkout
             - cache restore
-            - 'bundle install '
+            - find / -name Gemfile
+            - bundle install --deployment --path vendor/bundle
             - cache store
   - name: Tests
     dependencies:
