--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,5 +1,5 @@
 version: v1.0
-name: Python
+name: Kube
 agent:
   machine:
     type: e1-standard-2
@@ -13,7 +13,7 @@ blocks:
           commands:
             - checkout
             - cache restore
-            - bundle install --deployment --path=/vendor/bundle
+            - bundle install --deployment --path vendor/bundle
             - cache store
   - name: Tests
     dependencies:
