Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,24 +5,14 @@ agent:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
-  - name: ' Install dependencies'
+  - name: K8S
     dependencies: []
     task:
       jobs:
-        - name: bundle install
+        - name: Get Nodes
           commands:
             - checkout
-            - cache restore
-            - bundle install --deployment --path vendor/bundle
-            - cache store
-  - name: Tests
-    dependencies:
-      - ' Install dependencies'
-    task:
-      jobs:
-        - name: rspec
-          commands:
-            - 'checkout '
-            - cache restore
-            - bundle install --deployment --path vendor/bundle
-            - bundle exec rspec
+            - kubectl get nodes
+      env_vars:
+        - name: KUBECONFIG
+          value: /home/semaphore/.kube/dok8s.yaml
